[package]
name = "pinguin-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
juniper = { version = "0.15.10" }
juniper_hyper = "0.8.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0.91"
tokio = { version = "1.23.1", features = ["full"] }
url = "2.3.1"

# Fixes for MSRV check.
# TODO: Try remove on upgrade of `hyper` crate.
http-body = "0.4.5"

[dev-dependencies]
juniper = { version = "0.15.10", features = ["expose-test-schema"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }

